include_directories(${CMAKE_SOURCE_DIR}/filters/kword/libexport ${KOMAIN_INCLUDES}  ${KOTEXT_INCLUDES})

MESSAGE(STATUS "showcase: still need to port svg, genericimageexport, kword, ooimporss, magicpoint, kpr and ooppt filters")
#add_subdirectory( svg )
#add_subdirectory( genericimageexport )
#add_subdirectory( kword )
#add_subdirectory( ooimpress )
add_subdirectory( powerpoint )
#add_subdirectory( magicpoint )
#add_subdirectory(kpr)
add_subdirectory( kpr2odf )
#add_subdirectory( ooppt )
if(NOT WIN32 AND NOT QT_MAC_USE_COCOA)
    add_subdirectory( pptx )
endif(NOT WIN32 AND NOT QT_MAC_USE_COCOA)
